--- a/client/index.html
+++ b/client/index.html
@@ -79,12 +79,13 @@
     </style>
   </head>
   <body>
+    <!-- entire application is injected in this element -->
     <div id="root">
-      <!-- Loading state while React loads -->
       <div class="loading">
         <div class="spinner"></div>
       </div>
     </div>
     <script type="module" src="/src/main.jsx"></script>
+    <!--sent to starting point of react app -->
   </body>
 </html>
